# infoapp

./: .gitignore  Cargo.toml
src/: main.rs
src/infoapp/: mod.rs
src/infoapp/main/: mod.rs
src/infoapp/news/: mod.rs
src/infoapp/settings/: mod.rs
src/infoapp/todo/: mod.rs
src/infoapp/weather/: mod.rs
storage/: test.todo
