[package]
name = "infoapp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eframe = "0.19.0"
egui_extras = {version="0.19.0", features=["image"]}
image = "0.24.4"
regex = "1.6.0"
reqwest = { version = "0.11.12", features = ["blocking"] }
rss = "2.0.1"
